Make form fields required, fix text area not visible

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+
+textarea, select, input {
+  padding: 12px !important;
+}
